# Prism

./: CMakeLists.txt  README.md  TEST.txt  TOKEN_TEST.txt
.github/workflows/: build.yml  multi-platform-build.yml  release.yml
include/: build_executor.h  build_tool_validator.h  config_manager.h  logger.h  project_detector.h
src/: build_executor.cpp  build_tool_validator.cpp  config_manager.cpp  logger.cpp  main.cpp  project_detector.cpp
